# cads-catalogue

./: .cruft.json  .gitignore  .pre-commit-config-cruft.yaml  .pre-commit-config-weekly.yaml  .pre-commit-config-weekly.yaml.rej  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  environment-minver.yml  environment.yml  pyproject.toml  random_reports.json  setup.cfg
.github/workflows/: main.yaml  on-push.yml
alembic/: env.py
alembic/versions/: 0e6fa4b045eb_add_content_size_of_a_dataset.py  10bbb7ddf032_message_status_portal.py  18ba95eb351a_messages_by_site_header.py  1f965dd6fb7b_add_priority_for_contents.py  234139733806_support_cim_repo_hash.py  36caa987229e_multiple_datasets_repo.py  3c57748c209b_support_cim_repo_hash.py  472c0db250df_labelling_fields_to_enable_weight_in_.py  4947a1be081e_new_column_qos_tags.py  4e941eed3ad0_add_optional_spdx_identifier_for_.py  504bc78c19a5_drop_db_release_table.py  54243e0e04ad_added_sanity_check_column.py  59fa8a6b0a81_contents_added_to_structure.py  63827287c182_fields_for_advanced_fts.py  654a874249a8_added_api_constraint_flag.py  694fde86c48c_id_manage_of_contents.py  6a53ad750543_add_table_resource_data.py  6ac5a2abf5f5_hidden_contents_bool.py  7366df17e57c_resource_uid_included_in_fts.py  81993949dc59_add_high_priority_terms.py  869ed4e2a8cc_add_content_size_of_a_dataset.py  875f93f41d79_remove_views.py  8ccbe515155c_new_field_site.py  9c47800f0dcf_add_optional_update_frequency_of_a_.py  9d4affddbd2b_support_cim_repo_hash.py  a41235042d55_rename_keywords_to_facets.py  afe1900d489f_add_column_qa_flag.py  b7bbdaf01165_adding_column_for_sanity_check_.py  bc841f91fcbd_add_show_date_flag_for_messages.py  c39e4414b423_specific_portal_to_licences.py  c5b30a707329_relationship_contents_datasets.py  cab028ce2f75_add_optional_update_frequency_of_a_.py  cbf6bc621994_add_field_disabled_reason.py  ccdb8e308d41_add_source_repo_commit.py  da7b5a845136_add_override_info.py  ddf161fdce37_fair_additions.py  e0e68958c376_add_content_size_of_a_dataset.py  e5875ac4a047_save_contents_configuration.py  e5e9a8a41828_add_new_field_adaptor_properties_hash.py  efce9b3eb861_merge_migration_heads.py  (+2 more)
cads_catalogue/: __init__.py  alembic_cli.py  config.py  contents.py  database.py  entry_points.py  faceted_search.py  fair.py  form_manager.py  layout_manager.py  licence_manager.py  maintenance.py  manager.py  messages.py  object_storage.py  repos.py  sanity_check.py  skipping_utils.py  utils.py  validations.py
cads_catalogue/schemas/: sanity_check.json  sanity_check_item.json
cams-global-atmospheric-composition-forecasts/: abstract.md  constraints_notwhitelisted.json  generate.yaml  make_mars_list.sh  make_whitelist.py  mapping.json  run_update_latest_datetime  sample.json  update_datetime.yaml  variables.yaml
cams-global-atmospheric-composition-forecasts/mars_lists/: mars_201207.list  mars_201208.list  mars_201212.list  mars_201301.list  mars_201302.list  mars_201304.list  mars_201306.list  mars_201307.list  mars_201309.list  mars_201310.list  mars_201311.list  mars_201401.list  mars_201403.list  mars_201405.list  mars_201408.list  mars_201411.list  mars_201412.list  mars_201501.list  mars_201503.list  mars_201504.list  mars_201505.list  mars_201508.list  mars_201509.list  mars_201510.list  mars_201511.list  mars_201512.list  mars_201601.list  mars_201604.list  mars_201605.list  mars_201608.list  mars_201609.list  mars_201610.list  mars_201611.list  mars_201702.list  mars_201704.list  mars_201705.list  mars_201706.list  mars_201708.list  mars_201712.list  mars_201803.list  (+17 more)
cams-solar-radiation-timeseries/: abstract.md  dataset.yaml  generate.yaml
ci/: environment-ci.yml
docs/: conf.py  index.md
satellite-surface-radiation-budget/: abstract.yaml  adaptor.yaml  all_requests.json  cci-block.html  cdm.yaml  citation.md  cmsaf-block.html  dataset.yaml  form.json  generate.yaml  metadata.yaml  references.yaml  sample.json  tree-study.txt
tests/: conftest.py  test_00_version.py  test_01_config.py  test_01_utils.py  test_02_database.py  test_03_loader.py  test_03_manager.py  test_03_object_storage.py  test_04_repos.py  test_05_database.py  test_05_manager.py  test_05_validations.py  test_10_messages.py  test_15_contents.py  test_20_licence_manager.py  test_30_layout_manager.py  test_35_form_manager.py  test_40_manager.py  test_50_maintenance.py  test_60_fair.py  test_60_sanity_check.py  test_90_entry_points.py
tests/TESTDATA/: testdb.sql
tests/data/: dumped_resources.txt  layout1.json  (+13 more)
(+340 files in other folders)
