[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "numpy"
add_ignore = "D1"

[tool.pytest.ini_options]
minversion = "6.0"
postgresql_user = "catalogue"

[tool.setuptools_scm]
write_to = "cads_catalogue/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
