[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "minio",
  "pydantic",
  "python-frontmatter",
  "sqlalchemy",
  "sqlalchemy_utils",
  "structlog",
  "typer"
]
description = "CADS catalogue manager"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-catalogue"
readme = "README.md"

[project.scripts]
cads-catalogue = "cads_catalogue.entry_points:main"

[tool.coverage.run]
branch = true

[tool.mypy]
exclude = "tests/data"
plugins = "sqlmypy"
strict = false

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["cads_catalogue"]

[tool.setuptools_scm]
write_to = "cads_catalogue/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
