[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "alembic",
  "boto3",
  "cads-common@git+https://github.com/ecmwf-projects/cads-common.git",
  "gitpython",
  "python-frontmatter",
  "sqlalchemy>=2.0.9",
  "sqlalchemy_utils",
  "structlog",
  "typer"
]
description = "CADS catalogue manager"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-catalogue"
readme = "README.md"

[project.scripts]
cads-catalogue = "cads_catalogue.entry_points:main"
alembic-cli = "cads_catalogue.alembic_cli:main"

[tool.coverage.run]
branch = true
omit = [
  "alembic/*"
]

[tool.mypy]
exclude = "tests/data"
plugins = "sqlalchemy.ext.mypy.plugin"
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "frontmatter.*"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_catalogue"]

[tool.setuptools_scm]
write_to = "cads_catalogue/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
